Modification page authentification : - modifications des formulaires - ajout tabpanel - ajout snackbar - ajout message d'erreur / validation

--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -3,3 +3,18 @@
     max-width: 80%;
     margin: 5rem auto;
 }
+
+.errormessage{
+    font-weight: bold;
+    color: red;
+}
+
+button{
+    background: #7ddc32;
+    padding: 1.5%;
+    margin-top: 2%;
+}
+
+.test{
+    margin-left: 100%;
+}
