--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -9,8 +9,8 @@
     color: red;
 }
 
-input{
-    background: #2d63b3;
+.input-auth{
+    background: #00a8d4;
     padding: 1.5%;
     margin-top: 2%;
 }
