personnalisation dark / light mode

--- a/src/pages/Auth.css
+++ b/src/pages/Auth.css
@@ -9,11 +9,11 @@
     color: red;
 }
 
-.input-auth{
-    background: #00a8d4;
-    padding: 1.5%;
-    margin-top: 2%;
-}
+/*.input-auth{*/
+/*    background: #00a8d4;*/
+/*    padding: 1.5%;*/
+/*    margin-top: 2%;*/
+/*}*/
 
 .snackbar_register{
     margin-left: 100%;
