--- a/src/Components/DropZone/DropZone.css
+++ b/src/Components/DropZone/DropZone.css
@@ -1,7 +1,7 @@
 .dropzone {
     height: 200px;
     width: 200px;
-    background-color: #fff;
+    /*background-color: #fff;*/
     border: 2px dashed rgb(187, 186, 186);
     border-radius: 50%;
     display: flex;
