--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,13 +4,13 @@ body {
 .colour-block {
     background: #823A9C !important;
     width: 100%;
-    padding: 12% 5% 7% 5%;
+    padding: 5% 5% 2% 5%;
     color: #fff !important;
 }
 .black-block {
     background: #121212;
     width: 100%;
-    padding: 20% 5% 10% 5%;
+    padding: 10% 5% 2% 5%;
     color: #823A9C;
 }
 /*------------------*/
@@ -59,4 +59,8 @@ body {
     width: 100%;
     background: #121212;
     clip-path: polygon(5% 0%, 0 0, 95% 100%, 100% 100%);
+}
+
+.text {
+    padding-top: 5%;
 }
