--- a/src/Components/HomeMatches/HomeMatches.css
+++ b/src/Components/HomeMatches/HomeMatches.css
@@ -3,7 +3,7 @@
     color: #cccccc !important;
 }
 .css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root  {
-    color: #cccccc;
+    color: #cccccc !important;
 }
 .css-zylse7-MuiButtonBase-root-MuiIconButton-root.Mui-disabled {
     color: #555555 !important;
