--- a/src/Components/HomeCarousel/HomeCarousel.css
+++ b/src/Components/HomeCarousel/HomeCarousel.css
@@ -50,7 +50,7 @@
 }
 
 .carousel {
-    height: 45vh !important;
+    height: 425px !important;
     position: relative;
     width: 100%; }
 .carousel * {
@@ -58,8 +58,8 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
 .carousel img {
-    width: 100%;
-    height: auto;
+    /*width: 100%;*/
+    /*height: auto;*/
     display: inline-block;
     pointer-events: none;
     /*clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);*/
@@ -193,12 +193,13 @@
     height: 100%;
     width: 100%;
     background: #000;
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 93%, rgba(0,0,0,1) 100%);
+
+    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 83%, rgba(0,0,0,1) 65%);
     color: #fff;
     padding: 10px;
     line-height: 50%;
     text-align: right;
-    opacity: 0.25;
+    /*opacity: 0.25;*/
     -webkit-transition: opacity 0.35s ease-in-out;
     -moz-transition: opacity 0.35s ease-in-out;
     -ms-transition: opacity 0.35s ease-in-out;
@@ -232,9 +233,17 @@
     text-align: center;
     width: 100%;
     z-index: 1; }
+
 .pic {
-    height: 45vh;
+    height: 425px;
+    background-color: #121212;
 }
+
+.gamePic {
+    height: 100%;
+    width: auto;
+}
+
 @media (min-width: 960px) {
     .carousel .control-dots {
         bottom: 0; }
