--- a/src/Components/TeamCard/TeamCard.css
+++ b/src/Components/TeamCard/TeamCard.css
@@ -7,9 +7,9 @@
     background-color: #fff !important;
 }
 
-.css-1ri6ub7-MuiPaper-root-MuiCard-root {
-    background-image: url("localhost:3000/public/img/background/bg_eterelz.jpg") !important;
-}
+/*.css-1ri6ub7-MuiPaper-root-MuiCard-root {*/
+/*    background-image: url("localhost:3000/public/img/background/bg_eterelz.jpg") !important;*/
+/*}*/
 /*.profilPic {*/
 /*    width: 7vw !important;*/
 /*    height: auto !important;*/
