--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -15,6 +15,15 @@
 /*    height: auto !important;*/
 /*}*/
 
+.reactPlayer {
+    width: 100px !important;
+    height: auto !important;
+
+}
+.carousel .slide iframe {
+    width: 100%;
+    margin: 0;
+}
 @media(max-width:960px) {
     .card {
         height: 5vh;
