--- a/src/Components/HomeCarousel/HomeCarousel.css
+++ b/src/Components/HomeCarousel/HomeCarousel.css
@@ -210,7 +210,7 @@
     position: absolute;
     top: 1vh;
     left: 2vw;
-    width: 50%;
+    width: 25% !important;
     line-height: 2vh;
 }
 /*.teamCard:hover {*/
