--- a/src/Components/HomeMatches/HomeMatches.css
+++ b/src/Components/HomeMatches/HomeMatches.css
@@ -2,12 +2,16 @@
     background-color: #121212 !important;
     color: #cccccc !important;
 }
-.css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root  {
-    color: #cccccc !important;
-}
-.css-zylse7-MuiButtonBase-root-MuiIconButton-root.Mui-disabled {
-    color: #555555 !important;
-}
-.css-zylse7-MuiButtonBase-root-MuiIconButton-root {
+/*}*/
+/*.css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root  {*/
+/*    color: #cccccc !important;*/
+/*}*/
+/*.css-zylse7-MuiButtonBase-root-MuiIconButton-root.Mui-disabled {*/
+/*    color: #555555 !important;*/
+/*}*/
+/*.css-zylse7-MuiButtonBase-root-MuiIconButton-root {*/
+/*    color: #cccccc !important;*/
+/*}*/
+svg {
     color: #cccccc !important;
 }
