--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,18 +1,46 @@
+.demo-wrap {
+    position: relative;
+}
+
+.demo-wrap:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    background-image: url('bg_eterelz.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+}
+
+.demo-content {
+    position: relative;
+}
+
 .card {
-    margin-bottom: 1vh;
     text-align: left;
-    background-image: url("bg_eterelz.jpg") !important;
-    background-size: 100%;
     color: #cccccc !important;
     max-width: 100% !important;
+    width: 100% !important;
+    position: relative;
+    margin-top: 1vh;
+    background-color: rgba(0,0,0,0) !important;
 }
 
 .cardHeader span {
     color: #cccccc !important;
+
 }
 
 .cardAvatar {
-    background: rgba(0,0,0,0) !important;
+    background: rgba(0, 0, 0, 0) !important;
+}
+
+.profilPic {
 }
 
 .menuIcon {
@@ -33,11 +61,13 @@ ul {
     height: auto !important;
 
 }
+
 .carousel .slide iframe {
     width: 100%;
     margin: 0;
 }
-@media(max-width:960px) {
+
+@media (max-width: 960px) {
     .card {
         height: 5vh;
     }
