--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -24,7 +24,46 @@
 }
 
 .icon {
-    width: 38px;
-    height: auto;
+    /*width: 38px;*/
+    /*height: auto;*/
     margin: 5px;
+    color: red;
+}
+.fab {
+    /*font-size: 250px;*/
+    background:-moz-linear-gradient(right, rgba(0,168,212,1) 0%, rgba(134,24,173,1) 70%);
+    background: -webkit-linear-gradient(right, rgba(0,168,212,1) 0%,rgba(134,24,173,1) 70%);
+    background: linear-gradient(to right, rgba(0,168,212,1) 0%,rgba(134,24,173,1) 70%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color:transparent;
+}
+
+.youtubeIcon:hover, .twitterIcon:hover, .facebookIcon:hover, .discordIcon:hover, .twitchIcon:hover, .tiktokIcon:hover {
+    background: none;
+    -webkit-background-clip: inherit;
+    -webkit-text-fill-color: inherit;
+}
+
+.youtubeIcon:hover {
+    color: #FF0000;
+}
+
+.twitterIcon:hover {
+    color: #17A3F2;
+}
+
+.facebookIcon:hover {
+    color: #1877F2;
+}
+
+.discordIcon:hover {
+    color: #8A9CFC;
+}
+
+.twitchIcon:hover {
+    color: #A970FF;
+}
+
+.tiktokIcon:hover {
+    color: #ffffff;
 }
