--- a/src/Components/HomeCarousel/HomeCarousel.css
+++ b/src/Components/HomeCarousel/HomeCarousel.css
@@ -122,7 +122,8 @@
     margin-top: 0;
     padding: 5px; }
 .carousel.carousel-slider .control-arrow:hover {
-    background: rgba(0, 0, 0, 0.2); }
+    /*background: rgba(0, 0, 0, 0.2);*/
+}
 .carousel .slider-wrapper {
     overflow: hidden;
     margin: auto;
@@ -192,9 +193,9 @@
     margin-left: -45%;
     height: 100%;
     width: 100%;
-    background: #000;
+    /*background: #000;*/
 
-    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 83%, rgba(0,0,0,1) 65%);
+    /*background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 83%, rgba(0,0,0,1) 65%);*/
     color: #fff;
     padding: 10px;
     line-height: 50%;
@@ -237,7 +238,7 @@
 
 .pic {
     height: 425px;
-    background-color: #121212;
+    /*background-color: #121212;*/
 }
 
 .gamePic {
