--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("./bg_eterelz.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-attachment: fixed;
 }
 
 .form-control label,
