--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-top: 0 !important;
+    padding-top: 0 !important;
 }
 
 .logo {
@@ -10,6 +10,7 @@
 .footerTitle {
     font-weight: bold;
     font-size: 2em;
+    text-align: center;
 }
 
 .plateformList {
