--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("./bg2.jpg");
-  background-color: #121212 !important;
+  /*background-image: url("./bg2.jpg");*/
+  /*background-color: #121212 !important;*/
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
