--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  /*background-image: url("./bg2.jpg");*/
+  background-image: url("./bg2.jpg");
   /*background-color: #121212 !important;*/
   background-size: cover;
   background-position: center;
