--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     font-size: 1.5em;
     font-weight: bolder;
     font-style: italic;
-    padding: 5px;
+    padding-left: 20px;
     margin: 0;
 }
 
