--- a/src/Components/HomeCarousel/HomeCarousel.css
+++ b/src/Components/HomeCarousel/HomeCarousel.css
@@ -21,42 +21,61 @@
     background: none;
     border: 0;
     font-size: 32px;
-    cursor: pointer; }
+    cursor: pointer;
+}
+
 .carousel .control-arrow:focus, .carousel .control-arrow:hover {
     opacity: 1;
-    filter: alpha(opacity=100); }
+    filter: alpha(opacity=100);
+}
+
 .carousel .control-arrow:before, .carousel.carousel-slider .control-arrow:before {
     margin: 0 5px;
     display: inline-block;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    content: ''; }
+    content: '';
+}
+
 .carousel .control-disabled.control-arrow {
     opacity: 0;
     filter: alpha(opacity=0);
     cursor: inherit;
-    display: none; }
+    display: none;
+}
+
 .carousel .control-prev.control-arrow {
-    left: 0; }
+    left: 0;
+}
+
 .carousel .control-prev.control-arrow:before {
-    border-right: 8px solid #fff; }
+    border-right: 8px solid #fff;
+}
+
 .carousel .control-next.control-arrow {
-    right: 0; }
+    right: 0;
+}
+
 .carousel .control-next.control-arrow:before {
-    border-left: 8px solid #fff; }
+    border-left: 8px solid #fff;
+}
 
 .carousel-root {
     outline: none;
 }
 
 .carousel {
-    height: 425px !important;
+    height: 90vh;
     position: relative;
-    width: 100%; }
+    width: 100%;
+}
+
 .carousel * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+}
+
 .carousel img {
     /*width: 100%;*/
     /*height: auto;*/
@@ -64,18 +83,25 @@
     pointer-events: none;
     /*clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);*/
 }
+
 .carousel .carousel {
-    position: relative; }
+    position: relative;
+}
+
 .carousel .control-arrow {
     outline: 0;
     border: 0;
     background: none;
     top: 50%;
     margin-top: -13px;
-    font-size: 18px; }
+    font-size: 18px;
+}
+
 .carousel .thumbs-wrapper {
     margin: 20px;
-    overflow: hidden; }
+    overflow: hidden;
+}
+
 .carousel .thumbs {
     -webkit-transition: all 0.15s ease-in;
     -moz-transition: all 0.15s ease-in;
@@ -89,7 +115,9 @@
     transform: translate3d(0, 0, 0);
     position: relative;
     list-style: none;
-    white-space: nowrap; }
+    white-space: nowrap;
+}
+
 .carousel .thumb {
     -webkit-transition: border 0.15s ease-in;
     -moz-transition: border 0.15s ease-in;
@@ -101,29 +129,42 @@
     white-space: nowrap;
     overflow: hidden;
     border: 3px solid #fff;
-    padding: 2px; }
+    padding: 2px;
+}
+
 .carousel .thumb:focus {
     border: 3px solid #ccc;
-    outline: none; }
+    outline: none;
+}
+
 .carousel .thumb.selected, .carousel .thumb:hover {
-    border: 3px solid #333; }
+    border: 3px solid #333;
+}
+
 .carousel .thumb img {
-    vertical-align: top; }
+    vertical-align: top;
+}
+
 .carousel.carousel-slider {
     /*height: 40em;*/
     position: relative;
     margin: 0;
-    overflow: hidden; }
+    overflow: hidden;
+}
+
 .carousel.carousel-slider .control-arrow {
     top: 0;
     color: #fff;
     font-size: 26px;
     bottom: 0;
     margin-top: 0;
-    padding: 5px; }
+    padding: 5px;
+}
+
 .carousel.carousel-slider .control-arrow:hover {
     /*background: rgba(0, 0, 0, 0.2);*/
 }
+
 .carousel .slider-wrapper {
     overflow: hidden;
     margin: auto;
@@ -132,7 +173,9 @@
     -moz-transition: height 0.15s ease-in;
     -ms-transition: height 0.15s ease-in;
     -o-transition: height 0.15s ease-in;
-    transition: height 0.15s ease-in; }
+    transition: height 0.15s ease-in;
+}
+
 .carousel .slider-wrapper.axis-horizontal .slider {
     -ms-box-orient: horizontal;
     display: -webkit-box;
@@ -140,10 +183,14 @@
     display: -ms-flexbox;
     display: -moz-flex;
     display: -webkit-flex;
-    display: flex; }
+    display: flex;
+}
+
 .carousel .slider-wrapper.axis-horizontal .slider .slide {
     flex-direction: column;
-    flex-flow: column; }
+    flex-flow: column;
+}
+
 .carousel .slider-wrapper.axis-vertical {
     -ms-box-orient: horizontal;
     display: -webkit-box;
@@ -151,36 +198,50 @@
     display: -ms-flexbox;
     display: -moz-flex;
     display: -webkit-flex;
-    display: flex; }
+    display: flex;
+}
+
 .carousel .slider-wrapper.axis-vertical .slider {
     -webkit-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+}
+
 .carousel .slider {
     margin: 0;
     padding: 0;
     position: relative;
     list-style: none;
-    width: 100%; }
+    width: 100%;
+}
+
 .carousel .slider.animated {
     -webkit-transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -ms-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-    transition: all 0.35s ease-in-out; }
+    transition: all 0.35s ease-in-out;
+}
+
 .carousel .slide {
     min-width: 100%;
     margin: 0;
     position: relative;
-    text-align: center; }
+    text-align: center;
+}
+
 .carousel .slide img {
     height: 100%;
     vertical-align: top;
-    border: 0; }
+    border: 0;
+}
+
 .carousel .slide iframe {
     display: inline-block;
     width: calc(100% - 80px);
     margin: 0 40px 40px;
-    border: 0; }
+    border: 0;
+}
+
 .carousel .slide .legend {
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -193,9 +254,9 @@
     margin-left: -45%;
     height: 100%;
     width: 100%;
-    /*background: #000;*/
+    background: #000;
 
-    /*background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 83%, rgba(0,0,0,1) 65%);*/
+    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 83%, rgba(0,0,0,1) 65%);
     color: #fff;
     padding: 10px;
     line-height: 50%;
@@ -207,6 +268,7 @@
     -o-transition: opacity 0.35s ease-in-out;
     transition: opacity 0.35s ease-in-out;
 }
+
 .teamCard {
     position: absolute;
     top: 1vh;
@@ -223,10 +285,12 @@
     font-size: 64px;
     font-weight: bold;
 }
+
 .textSlide {
     font-size: 32px;
     font-weight: bold;
 }
+
 .carousel .control-dots {
     position: absolute;
     bottom: 0;
@@ -234,22 +298,25 @@
     padding: 0;
     text-align: center;
     width: 100%;
-    z-index: 1; }
+    z-index: 1;
+}
 
 .pic {
-    height: 425px;
+    height: 100vh;
     /*background-color: #121212;*/
 }
 
 .gamePic {
-    height: 100%;
-    width: auto;
+    width: 100% !important;
+    height: auto;
 }
 
 @media (min-width: 960px) {
     .carousel .control-dots {
-        bottom: 0; }
+        bottom: 0;
+    }
 }
+
 .carousel .control-dots .dot {
     -webkit-transition: opacity 0.25s ease-in;
     -moz-transition: opacity 0.25s ease-in;
@@ -265,10 +332,14 @@
     height: 8px;
     cursor: pointer;
     display: inline-block;
-    margin: 0 8px; }
+    margin: 0 8px;
+}
+
 .carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
     opacity: 1;
-    filter: alpha(opacity=100); }
+    filter: alpha(opacity=100);
+}
+
 .carousel .carousel-status {
     position: absolute;
     top: 0;
@@ -276,23 +347,45 @@
     padding: 5px;
     font-size: 10px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
-    color: #fff; }
-.carousel:hover .slide .legend {
-    opacity: 1; }
+    color: #fff;
+}
 
-@media(max-width: 960px) {
+.carousel:hover .slide .legend {
+    opacity: 1;
+}
+
+@media (max-width: 960px) {
     .carousel {
         height: 25vh !important;
         position: relative;
-        width: 100%; }
-    .pic {
-        height: 25vh;
+        width: 100%;
     }
+
+    .carousel img {
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    .pic {
+        /*height: 25vh;*/
+        width: 100%;
+        height: auto;
+    }
+
     .teamCard {
-        position: absolute;
-        top: 1vh;
         left: 2vw;
         width: 50%;
         line-height: 2vh;
+    }
+
+    .titleSlide {
+        font-size: 40px;
+        font-weight: bold;
+        line-height: 30px;
+    }
+
+    .textSlide {
+        font-size: 20px;
+        font-weight: bold;
     }
 }
