--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,25 +20,25 @@ body {
 /*------------------*/
 /*  SKEW CLOCKWISE  */
 /*------------------*/
-.skew-cc {
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    /*background: linear-gradient(to right bottom, #8618ad 49%, #121212 50%),*/
-    /*linear-gradient(-50deg, #121212 16px, #000 0);*/
-}
+/*.skew-cc {*/
+/*    width: 100%;*/
+/*    height: 100px;*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    !*background: linear-gradient(to right bottom, #8618ad 49%, #121212 50%),*!*/
+/*    !*linear-gradient(-50deg, #121212 16px, #000 0);*!*/
+/*}*/
 
 /*-------------------------*/
 /* SKEW COUNTER CLOCKWISE  */
 /*-------------------------*/
-.skew-c {
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    left: 0;
-    /*background: linear-gradient(to left bottom, #121212 49%, #8618ad 50%);*/
-}
+/*.skew-c {*/
+/*    width: 100%;*/
+/*    height: 100px;*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    !*background: linear-gradient(to left bottom, #121212 49%, #8618ad 50%);*!*/
+/*}*/
 
 .homeCollapsible {
     background: #121212 !important;
@@ -99,4 +99,5 @@ body {
     font-size: 2em;
     font-weight: bolder;
 }
+
 
